[package]
name = "myosu-runtime"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/happybigmtn/myosu"
description = "Runtime restart surface for the Myosu chain"
publish = false
build = "build.rs"

[lib]
name = "myosu_runtime"
path = "src/lib.rs"

[features]
default = ["std"]
runtime-benchmarks = []
std = [
    "codec/std",
    "frame/std",
    "pallet-balances/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-genesis-builder/std",
    "substrate-wasm-builder",
]
try-runtime = []

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
frame = { package = "polkadot-sdk-frame", git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false, features = ["experimental", "runtime"] }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
scale-info = { version = "2.11.3", default-features = false, features = ["derive"] }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", optional = true }
