[package]
name = "myosu-chain-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"
description = "Runtime package scaffold for the myosu chain restart"

[lib]
name = "myosu_chain_runtime"
path = "src/lib.rs"

[features]
default = ["std"]
fast-runtime = []
fast-blocks = ["fast-runtime"]
full-runtime = [
    "pallet_subtensor/full-runtime",
    "subtensor-transaction-fee/full-runtime",
    "dep:pallet-insecure-randomness-collective-flip",
    "dep:pallet-multisig",
    "dep:pallet-preimage",
    "dep:pallet-safe-mode",
    "dep:pallet-scheduler",
    "dep:pallet-subtensor-proxy",
    "dep:pallet-sudo",
]
pow-faucet = []
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-admin-utils/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet_subtensor/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "full-runtime",
    "pallet-subtensor-proxy?/runtime-benchmarks",
]
std = [
    "codec/std",
    "frame-benchmarking?/std",
    "frame-system-benchmarking?/std",
    "frame-executive/std",
    "frame-metadata-hash-extension/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "log/std",
    "pallet-admin-utils/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet_subtensor/std",
    "pallet-grandpa/std",
    "pallet-insecure-randomness-collective-flip?/std",
    "pallet-multisig?/std",
    "pallet-preimage?/std",
    "pallet-safe-mode?/std",
    "pallet-scheduler?/std",
    "pallet-subtensor-proxy?/std",
    "pallet-subtensor-utility/std",
    "pallet-sudo?/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "runtime-common/std",
    "serde_json/std",
    "scale-info/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-consensus-babe/std",
    "sp-core/std",
    "sp-genesis-builder/std",
    "sp-inherents/std",
    "sp-io/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-storage/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "subtensor-runtime-common/std",
    "subtensor-custom-rpc-runtime-api/std",
    "subtensor-swap-interface/std",
    "subtensor-transaction-fee/std",
]
try-runtime = []

[dependencies]
codec = { workspace = true, features = ["derive"] }
frame-benchmarking = { workspace = true, optional = true }
frame-system-benchmarking = { workspace = true, optional = true }
frame-executive.workspace = true
frame-metadata-hash-extension.workspace = true
frame-support.workspace = true
frame-system.workspace = true
frame-system-rpc-runtime-api.workspace = true
log.workspace = true
pallet-admin-utils.workspace = true
pallet-aura.workspace = true
pallet-balances.workspace = true
pallet_subtensor = { package = "pallet-game-solver", path = "../pallets/game-solver", default-features = false }
pallet-grandpa.workspace = true
pallet-insecure-randomness-collective-flip = { workspace = true, optional = true }
pallet-multisig = { workspace = true, optional = true }
pallet-preimage = { workspace = true, optional = true }
pallet-safe-mode = { workspace = true, optional = true }
pallet-scheduler = { workspace = true, optional = true }
pallet-subtensor-proxy = { workspace = true, optional = true }
pallet-subtensor-utility.workspace = true
pallet-sudo = { workspace = true, optional = true }
pallet-timestamp.workspace = true
pallet-transaction-payment.workspace = true
pallet-transaction-payment-rpc-runtime-api.workspace = true
runtime-common.workspace = true
serde_json = { workspace = true, features = ["alloc"] }
scale-info = { workspace = true, features = ["derive"] }
sp-api.workspace = true
sp-block-builder.workspace = true
sp-consensus-aura.workspace = true
sp-consensus-babe.workspace = true
sp-core.workspace = true
sp-genesis-builder.workspace = true
sp-inherents.workspace = true
sp-io.workspace = true
sp-offchain.workspace = true
sp-runtime.workspace = true
sp-session.workspace = true
sp-std.workspace = true
sp-storage.workspace = true
sp-transaction-pool.workspace = true
sp-version.workspace = true
substrate-fixed.workspace = true
subtensor-custom-rpc-runtime-api.workspace = true
subtensor-macros.workspace = true
subtensor-runtime-common.workspace = true
subtensor-swap-interface.workspace = true
subtensor-transaction-fee.workspace = true

[build-dependencies]
substrate-wasm-builder = { workspace = true, default-features = true }
