[package]
name = "pallet-game-solver"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Game-solving pallet for the myosu chain"

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-std/std",
    "sp-io/std",
    "scale-info/std",
    "parity-scale-codec/std",
    "log/std",
]
runtime-benchmarks = []
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "sp-runtime/try-runtime",
]

[dependencies]
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
parity-scale-codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.3", default-features = false, features = ["derive"] }
log = { version = "0.4", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
