[package]
name = "subtensor-swap-interface"
version = "0.1.0"
edition = "2024"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false, features = ["derive"] }
frame-support.workspace = true
scale-info = { workspace = true, features = ["derive"] }
substrate-fixed.workspace = true
subtensor-runtime-common.workspace = true
subtensor-macros.workspace = true

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"scale-info/std",
	"substrate-fixed/std",
	"subtensor-runtime-common/std",
]
