[package]
name = "safe-math"
version = "0.1.0"
edition = "2024"

[dependencies]
substrate-fixed.workspace = true
sp-arithmetic.workspace = true
sp-std.workspace = true
num-traits = { workspace = true, features = ["libm"] }

[features]
default = ["std"]
std = [
	"substrate-fixed/std",
	"sp-std/std",
	"sp-arithmetic/std",
	"num-traits/std",
]
