[package]
name = "subtensor-macros"
version = "0.1.0"
edition = "2024"
license = "MIT"

description = "support macros for Subtensor"
repository = "https://github.com/opentensor/subtensor"
homepage = "https://bittensor.com/"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.117", features = [
    "full",
    "visit-mut",
    "visit",
    "extra-traits",
    "parsing",
] }
proc-macro2 = "1.0.106"
quote = "1.0.45"
ahash = "0.8.12"
