[package]
name = "game-solver-rpc"
version = "0.0.2"
edition.workspace = true
authors = ['Cameron Fairchild <https://github.com/camfairchild>']
repository = 'https://github.com/opentensor/subtensor'
description = "A pallet that adds custom RPC calls to subtensor"
license = "MIT"
publish = false

[lints]
workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false, features = ["derive"] }
jsonrpsee = { workspace = true, features = ["client-core", "server", "macros"] }

# Substrate packages
sp-api.workspace = true
sp-blockchain.workspace = true
sp-runtime.workspace = true

# local packages
subtensor-runtime-common.workspace = true
game-solver-rpc-runtime-api.workspace = true

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-api/std",
	"sp-runtime/std",
	"game-solver-rpc-runtime-api/std",
	"subtensor-runtime-common/std",
]
pow-faucet = []
