[package]
name = "subtensor-custom-rpc-runtime-api"
version = "0.0.2"
edition.workspace = true
authors = ['Cameron Fairchild <https://github.com/camfairchild>']
repository = 'https://github.com/opentensor/subtensor'
description = "A pallet that adds a custom runtime API to Subtensor"
license = "MIT"
publish = false

[lints]
workspace = true

[dependencies]
sp-api.workspace = true
sp-runtime.workspace = true
codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false, features = ["derive"] }
subtensor-runtime-common.workspace = true
# local
pallet-game-solver.workspace = true

[features]
default = ["std"]
std = [
	"codec/std",
	"pallet-game-solver/std",
	"sp-api/std",
	"sp-runtime/std",
	"subtensor-runtime-common/std",
]
pow-faucet = []
